--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h3>About</h3>
         </div>
         <div class="pages-item">
-          <h3>Contact</h3>
+          <a href="./contact.html"><h3>Contact</h3></a>
         </div>
       </div>
     </header>
