adapted router for contact and about page (temporary solution)

--- a/contact.html
+++ b/contact.html
@@ -58,5 +58,7 @@
       </div>
       <img src="./img/about.webp" alt="contact us" class="main-img" />
     </main>
+
+    <script src="./script.js"></script>
   </body>
 </html>
