about page is done, fixed a bug with price filter

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
           <a href="./index.html"><h3>Home</h3></a>
         </div>
         <div class="pages-item">
-          <h3>About</h3>
+          <a href="./about.html"><h3>About</h3></a>
         </div>
         <div class="pages-item active-page">
           <h3>Contact</h3>
