--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <h3>Home</h3>
         </div>
         <div class="pages-item">
-          <h3>About</h3>
+          <a href="./about.html"><h3>About</h3></a>
         </div>
         <div class="pages-item">
           <a href="./contact.html"><h3>Contact</h3></a>
@@ -36,7 +36,7 @@
 
     <main>
       <div class="main-bg">
-        <img
+        <image
           src="./img/top-bg.webp"
           alt="shop top bg"
           width="700px"
