--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Online Shop</title>
     <link href="./sass/style.css" rel="stylesheet" type="text/css" />
     <link href="./fonts/fonts.css" rel="stylesheet" type="text/css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/img/ico/favicon.ico" />
   </head>
   <body>
     <header>
@@ -32,11 +33,15 @@
           <a href="./contact.html"><h3>Contact</h3></a>
         </div>
       </div>
+
+      <div class="header-menu">
+        <img src="./img/menu.webp" alt="store menu" width="30" height="30" />
+      </div>
     </header>
 
     <main>
       <div class="main-bg">
-        <image
+        <img
           src="./img/top-bg.webp"
           alt="shop top bg"
           width="700px"
