--- a/about.html
+++ b/about.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
     <link rel="stylesheet" type="text/css" href="./sass/about.css" />
+    <link
+      rel="shortcut icon"
+      href="./img/ico/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <header>
