added hamburger menu on about page

--- a/about.html
+++ b/about.html
@@ -38,6 +38,10 @@
           <a href="./contact.html"><h3>Contact</h3></a>
         </div>
       </div>
+
+      <div class="header-menu">
+        <img src="./img/menu.webp" alt="store menu" width="30" height="30" />
+      </div>
     </header>
 
     <main>
@@ -51,7 +55,7 @@
           shorts keytar banjo tattooed umami cardigan.
         </p>
       </div>
-      <img src="./img/about.webp" alt="about kubic store" />
+      <img class="main-img" src="./img/about.webp" alt="about kubic store" />
     </main>
     <script src="./script.js"></script>
   </body>
