added responsive to contact page

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,10 @@
           <h3>Contact</h3>
         </div>
       </div>
+
+      <div class="header-menu">
+        <img src="./img/menu.webp" alt="store menu" width="30" height="30" />
+      </div>
     </header>
 
     <main>
@@ -57,7 +61,12 @@
           <button class="input-btn">Send</button>
         </div>
       </div>
-      <img src="./img/about.webp" alt="contact us" class="main-img" />
+      <img
+        class="main-img"
+        src="./img/about.webp"
+        alt="contact us"
+        class="main-img"
+      />
     </main>
 
     <script src="./script.js"></script>
