added webpack to prevent 404 on reload

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <img
             class="home"
             alt="shop logo"
-            src="./img/header-logo.webp"
+            src="./header-logo.webp"
             width="45px"
             height="45px"
           />
@@ -40,12 +40,12 @@
       </div>
 
       <div class="header-menu">
-        <img src="./img/menu.webp" alt="store menu" width="30" height="30" />
+        <img src="./menu.webp" alt="store menu" width="30" height="30" />
       </div>
     </header>
 
-    <main>
-      <div class="main-text">
+    <main class="about">
+      <div class="main-txt">
         <h3>About Us</h3>
         <p>
           Fam locavore kickstarter distillery. Mixtape chillwave tumeric
@@ -55,7 +55,7 @@
           shorts keytar banjo tattooed umami cardigan.
         </p>
       </div>
-      <img class="main-img" src="./img/about.webp" alt="about kubic store" />
+      <img class="main-img" src="./about.webp" alt="about kubic store" />
     </main>
     <script src="./script.js"></script>
   </body>
