--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
           <img
             class="home"
             alt="shop logo"
-            src="./img/header-logo.webp"
+            src="./header-logo.webp"
             width="45px"
             height="45px"
           />
@@ -36,11 +36,11 @@
       </div>
 
       <div class="header-menu">
-        <img src="./img/menu.webp" alt="store menu" width="30" height="30" />
+        <img src="./menu.webp" alt="store menu" width="30" height="30" />
       </div>
     </header>
 
-    <main>
+    <main class="contact">
       <div class="main-contact">
         <div class="main-text">
           <h3>Write us</h3>
@@ -63,7 +63,7 @@
       </div>
       <img
         class="main-img"
-        src="./img/about.webp"
+        src="./about.webp"
         alt="contact us"
         class="main-img"
       />
