--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Online Shop</title>
     <link href="./sass/style.css" rel="stylesheet" type="text/css" />
     <link href="./fonts/fonts.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="/img/ico/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/ico/favicon.ico" />
   </head>
   <body>
     <header>
@@ -16,7 +16,7 @@
         <img
           class="home"
           alt="shop logo"
-          src="./img/header-logo.webp"
+          src="./header-logo.webp"
           width="45px"
           height="45px"
         />
@@ -36,14 +36,14 @@
       </div>
 
       <div class="header-menu">
-        <img src="./img/menu.webp" alt="store menu" width="30" height="30" />
+        <img src="./menu.webp" alt="store menu" width="30" height="30" />
       </div>
     </header>
 
     <main>
       <div class="main-bg">
         <img
-          src="./img/top-bg.webp"
+          src="./top-bg.webp"
           alt="shop top bg"
           width="700px"
           height="300px"
@@ -78,7 +78,7 @@
       <div class="footer-contacts">
         <img
           class="footer-logo"
-          src="./img/footer-logo.webp"
+          src="./footer-logo.webp"
           alt="shop footer logo"
           width="36"
           height="36"
@@ -86,9 +86,9 @@
         <div class="contacts">
           <h3>kubic.store</h3>
           <div class="contacts-socials">
-            <img src="./img/ico/dribbble.webp" alt="dribble" />
-            <img src="./img/ico/inst.webp" alt="inst" />
-            <img src="./img/ico/twitter.webp" alt="twitter" />
+            <img src="./dribbble.webp" alt="dribble" />
+            <img src="./inst.webp" alt="inst" />
+            <img src="./twitter.webp" alt="twitter" />
           </div>
         </div>
       </div>
@@ -96,9 +96,9 @@
       <div class="footer-email">
         <h3>Subscribe to our mail list</h3>
         <div class="email-form">
-          <img class="form-mail__ico" src="./img/ico/mail.webp" alt="email" />
+          <img class="form-mail__ico" src="./mail.webp" alt="email" />
           <input type="text" placeholder="Enter your mail here" />
-          <img class="form-send" src="./img/ico/arrow-right.webp" alt="send" />
+          <img class="form-send" src="./arrow-right.webp" alt="send" />
         </div>
       </div>
     </footer>
