--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Online Shop</title>
     <link href="./sass/style.css" rel="stylesheet" type="text/css" />
     <link href="./fonts/fonts.css" rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/x-icon" href="img/ico/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <header>
